# scope-shader-injector

./: .gitignore  README.md  pyproject.toml
examples/: README.md  ascii.glsl  barrel_distortion.glsl  blend_reference.glsl  brightness_contrast.glsl  chromatic_aberration.glsl  color_cycle.glsl  difference.glsl  dither.glsl  edge_detection.glsl  fractal_overlay.glsl  glitch.glsl  grayscale.glsl  hue_shift.glsl  invert.glsl  kaleidoscope.glsl  mask_with_reference.glsl  matrix.glsl  mirror.glsl  night_vision.glsl  passthrough.glsl  pixelate.glsl  posterize.glsl  rain.glsl  rgb_shift.glsl  scan_lines.glsl  sepia.glsl  thermal.glsl  vignette.glsl  wave_distortion.glsl  zoom_blur.glsl
scope_shader_injector/: __init__.py  __main__.py  plugin.py  setup_dependencies.py
scope_shader_injector/pipelines/: __init__.py  pipeline.py  schema.py
