[project]
name = "scope-shader-injector"
version = "0.1.0"
description = "A Scope plugin for real-time shader injection on video streams using Shadertoy-style GLSL"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = ["scope", "shader", "glsl", "video", "shadertoy"]
dependencies = [
    "moderngl>=5.10.0",
    "glcontext>=3.0.0",  # Provides EGL backend for headless rendering
    "numpy>=1.26.0",
    "pillow>=10.0.0",
]

[project.scripts]
shader-injector-check = "scope_shader_injector.setup_dependencies:print_status"

[project.entry-points."scope"]
scope_shader_injector = "scope_shader_injector.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scope_shader_injector"]
